# japanese-ai-outbound-caller

./: .env.example  .gitignore  CODEX.md  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  notion-sync.yml
agent/: __init__.py  worker.py
app/: __init__.py  config.py  dispatcher.py  main.py  models.py  policy.py  privacy.py  storage.py
docs/: architecture.md  legal-and-safety.md  research.md  setup.md
notion/: AI音声電話サービス調査.md
scripts/: sync_notion.py
tests/: test_api.py  test_notion.py  test_policy.py
